[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "shipment-tracking"
version = "0.1.0"
description = "Shipment tracking prototype for Excel-based logistics data."
requires-python = ">=3.10"
dependencies = ["openpyxl>=3.1.5"]

[tool.setuptools.packages.find]
where = ["src"]
